Selecting animation added

--- a/frontend/request-tool.html
+++ b/frontend/request-tool.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="Terms-and-Conditions">
+<body class="request-page">
     <header class="main-header">
         <nav class="container">
             <a href="index.html" class="logo">Digifello <span>AI</span></a>
